Added Planner functionality on FE & BE, with initail addition of Planner component.